Use parallelstream instead of stream for faster filtering.